--- a/lab4/bai6/index.html
+++ b/lab4/bai6/index.html
@@ -25,8 +25,8 @@
                         <input type="password" name="password" placeholder="password" class="input-sigin"/>
                     </div>
                     <div>
-                        <button type="submit" class="btn-signin">SIGN IN</button>
-                        <!-- <input type="submit" class="btn-signin" value="SIGN IN"/> -->
+                        <!-- <button type="submit" class="btn-signin">SIGN IN</button> -->
+                        <input type="submit" class="btn-signin" value="SIGN IN"/>
                     </div>
                 </form>
                 <div class="or-login">
